--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,23 @@
   </head>
   <body>
     <div class="container bordered">
-      <happi-graph></happi-graph>
+      <happi-graph id="happi-graph"></happi-graph>
     </div>
+
+    <script>
+      let propertiesMap = {
+        SimpleSquare: 'simple-square'
+      };
+
+      let iconsMap = {
+        'simple-square': `<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0H20V20H0V0Z" fill="white"/></svg>`,
+      };
+
+      let happiGraphInstance = document.querySelector('#happi-graph');
+
+      happiGraphInstance.iconsMap = iconsMap;
+      happiGraphInstance.propertiesMap = propertiesMap;
+
+    </script>
   </body>
 </html>
