--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,11 @@
     </style>
   </head>
   <body>
+    <button id="zoomIn">+</button>
+    <button id="zoomOut">-</button>
+
+    <br/><br/>
+
     <div class="container bordered">
       <happi-graph id="happi-graph"></happi-graph>
     </div>
@@ -41,9 +46,59 @@
 
       let happiGraphInstance = document.querySelector('#happi-graph');
 
+      let zoomIn = document.querySelector('#zoomIn');
+
+      zoomIn.addEventListener('click', () => {
+        happiGraphInstance.customZoomIn();
+      });
+
+      let zoomOut = document.querySelector('#zoomOut');
+
+      zoomOut.addEventListener('click', () => {
+        happiGraphInstance.customZoomOut();
+      });
+
       happiGraphInstance.iconsMap = iconsMap;
       happiGraphInstance.propertiesMap = propertiesMap;
 
+      happiGraphInstance.nodes = [
+        {id: 1, x: 0, y: 750},
+        {id: 2, x: 600, y: 0},
+        {id: 3, x: 600, y: 300},
+
+        {id: 4, x: 1200, y: 300},
+        {id: 5, x: 1800, y: 300},
+
+        {id: 6, x: 600, y: 1500},
+        {id: 7, x: 600, y: 600},
+        {id: 8, x: 600, y: 900},
+        {id: 9, x: 600, y: 1200},
+
+        {id: 10, x: 2400, y: 300},
+        {id: 11, x: 3000, y: 300},
+        {id: 12, x: 3600, y: 300},
+        {id: 13, x: 4200, y: 300},
+        {id: 14, x: 4800, y: 300},
+        {id: 15, x: 5400, y: 300}
+      ];
+
+      happiGraphInstance.links = [
+        {from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[1], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[2], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[5], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[6], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[7], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[0], to: happiGraphInstance.nodes[8], connectionFrom: false, connectionTo: true},
+
+        {from: happiGraphInstance.nodes[2], to: happiGraphInstance.nodes[3], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[3], to: happiGraphInstance.nodes[4], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[4], to: happiGraphInstance.nodes[9], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[9], to: happiGraphInstance.nodes[10], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[10], to: happiGraphInstance.nodes[11], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[11], to: happiGraphInstance.nodes[12], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[12], to: happiGraphInstance.nodes[13], connectionFrom: false, connectionTo: true},
+        {from: happiGraphInstance.nodes[13], to: happiGraphInstance.nodes[14], connectionFrom: false, connectionTo: true},
+      ];
     </script>
   </body>
 </html>
